--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">detectives-frontend</string>
     <string name="hint_category">Hint category</string>
     <string name="hint_description">Hint description</string>
+    <string name="mapbox_access_token">pk.eyJ1IjoicGhpbGtpc3RlcnMiLCJhIjoiY2t2c2l0aHlpMmxiajMya2xwNnp4ZWtsNiJ9.mhZpfB64qU2PoMeBAMnowA</string>
 
     <string-array name="weapon_names">
         <item>Pistole</item>
