frontend-5: added logic (for presentation purposes). can't drop an object to target, if it has the same description.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string-array name="person_names">
         <item>Dennis Gatow</item>
         <item>Felix Bloom</item>
-        <item>tom Gruen</item>
+        <item>Tom Gruen</item>
         <item>Klara Porz</item>
         <item>Gloria Roth</item>
         <item>Diana Weiss</item>
