frontend-27: merged frontend-27 into main, changed Appname

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Stolze Detektive</string>
+    <string name="app_name">Proud Detectives</string>
     <string name="hint_category">Hint category</string>
     <string name="hint_description">Hint description</string>
     <string name="type_a_message">Type a message</string>
